--- a/699M2.ipynb
+++ b/699M2.ipynb
@@ -57,11 +57,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8edf5c80",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function print(*args, sep=' ', end='\\n', file=None, flush=False)>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum()\n",
+    "print"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "587438b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0           3\n",
+      "1        6735\n",
+      "2          23\n",
+      "3         500\n",
+      "4        2137\n",
+      "         ... \n",
+      "22426     943\n",
+      "22427    1103\n",
+      "22428    2530\n",
+      "22429     815\n",
+      "22430     103\n",
+      "Name: Total Office Based Visit Costs, Length: 22431, dtype: int64\n",
+      "Mean Total Office Based Visit Costs: 1023.2176006419687\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = df.rename(columns = {'(TOTAL OFF-BASED DR EXP 22 )OBDEXP22'\n",
+    " : 'Total Office Based Visit Costs'})\n",
+    "\n",
+    "print(df['Total Office Based Visit Costs'])\n",
+    "\n",
+    "\n",
+    "col = \"Total Office Based Visit Costs\"\n",
+    "print(f\"Mean {col}: {df[col].mean()}\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
