--- a/699M2.ipynb
+++ b/699M2.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "8edf5c80",
    "metadata": {},
    "outputs": [
@@ -67,19 +67,19 @@
        "<function print(*args, sep=' ', end='\\n', file=None, flush=False)>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.isna().sum()\n",
+    "df.isnull().sum()\n",
     "print"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "587438b0",
    "metadata": {},
    "outputs": [
@@ -87,31 +87,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0           3\n",
-      "1        6735\n",
-      "2          23\n",
-      "3         500\n",
-      "4        2137\n",
-      "         ... \n",
-      "22426     943\n",
-      "22427    1103\n",
-      "22428    2530\n",
-      "22429     815\n",
-      "22430     103\n",
-      "Name: Total Office Based Visit Costs, Length: 22431, dtype: int64\n",
-      "Mean Total Office Based Visit Costs: 1023.2176006419687\n"
+      "       Total Office Based Visit Costs  Total Office Based Visit Costs\n",
+      "0                                 248                               3\n",
+      "1                               16039                            6735\n",
+      "2                                 217                              23\n",
+      "3                                1278                             500\n",
+      "4                                3530                            2137\n",
+      "...                               ...                             ...\n",
+      "22426                            1668                             943\n",
+      "22427                            3378                            1103\n",
+      "22428                            8817                            2530\n",
+      "22429                            1391                             815\n",
+      "22430                             131                             103\n",
+      "\n",
+      "[22431 rows x 2 columns]\n",
+      "Mean Total Office Based Visit Costs: Total Office Based Visit Costs    2778.106594\n",
+      "Total Office Based Visit Costs    1023.217601\n",
+      "dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "df = df.rename(columns = {'(TOTAL OFF-BASED DR EXP 22 )OBDEXP22'\n",
-    " : 'Total Office Based Visit Costs'})\n",
+    "df = df.rename(columns = {'(OFFICE-BASED PHYSICIAN VISIT CHARGES 22)OBDTCH22'\n",
+    " : 'Total Office Based Visit Costs','OFTSMK53' : 'Smoking Frequency', 'ADASKALC42' : 'Alcohol Consumption', 'ADSTAL42' : 'Advised to Stop Alcohol',  })\n",
     "\n",
     "print(df['Total Office Based Visit Costs'])\n",
     "\n",
     "\n",
     "col = \"Total Office Based Visit Costs\"\n",
     "print(f\"Mean {col}: {df[col].mean()}\")\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   }
