--- a/699M2.ipynb
+++ b/699M2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "73d000b6",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "ab8c8147",
    "metadata": {},
    "outputs": [
@@ -30,18 +30,18 @@
       "4  2460018  101  2460018101     24      2022       A       A       A       A   \n",
       "\n",
       "  FAMIDYR  ... RXOSR22  RXPTR22  RXOTH22      PERWT22F      FAMWT22F  \\\n",
-      "0       A  ...       0        0        0   5728.309495   5232.211986   \n",
-      "1       A  ...       0        0        0  15648.881460  16017.881690   \n",
-      "2       A  ...       0        0        0  14123.720180  16017.881690   \n",
-      "3       A  ...       0     5288      299  16982.054920  21905.758880   \n",
-      "4       A  ...       0       10        0  10682.619950  11344.291010   \n",
+      "0       A  ...     0.0      0.0      0.0   5728.309495   5232.211986   \n",
+      "1       A  ...     0.0      0.0      0.0  15648.881460  16017.881690   \n",
+      "2       A  ...     0.0      0.0      0.0  14123.720180  16017.881690   \n",
+      "3       A  ...     0.0   5288.0    299.0  16982.054920  21905.758880   \n",
+      "4       A  ...     0.0     10.0      0.0  10682.619950  11344.291010   \n",
       "\n",
       "       FAMWT22C     SAQWT22F     DIABW22F  VARSTR  VARPSU  \n",
-      "0   5232.211986   3994.68714  6034.636755    2082       1  \n",
-      "1  16017.881690      0.00000     0.000000    2001       4  \n",
-      "2  12580.731740      0.00000     0.000000    2001       4  \n",
-      "3  21905.758880      0.00000     0.000000    2038       3  \n",
-      "4  11344.291010  17152.43941     0.000000    2041       1  \n",
+      "0   5232.211986   3994.68714  6034.636755  2082.0     1.0  \n",
+      "1  16017.881690      0.00000     0.000000  2001.0     4.0  \n",
+      "2  12580.731740      0.00000     0.000000  2001.0     4.0  \n",
+      "3  21905.758880      0.00000     0.000000  2038.0     3.0  \n",
+      "4  11344.291010  17152.43941     0.000000  2041.0     1.0  \n",
       "\n",
       "[5 rows x 1420 columns]\n"
      ]
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "8edf5c80",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
        "<function print(*args, sep=' ', end='\\n', file=None, flush=False)>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "587438b0",
    "metadata": {},
    "outputs": [
@@ -87,35 +87,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       Total Office Based Visit Costs  Total Office Based Visit Costs\n",
-      "0                                 248                               3\n",
-      "1                               16039                            6735\n",
-      "2                                 217                              23\n",
-      "3                                1278                             500\n",
-      "4                                3530                            2137\n",
-      "...                               ...                             ...\n",
-      "22426                            1668                             943\n",
-      "22427                            3378                            1103\n",
-      "22428                            8817                            2530\n",
-      "22429                            1391                             815\n",
-      "22430                             131                             103\n",
-      "\n",
-      "[22431 rows x 2 columns]\n",
-      "Mean Total Office Based Visit Costs: Total Office Based Visit Costs    2778.106594\n",
-      "Total Office Based Visit Costs    1023.217601\n",
-      "dtype: float64\n"
+      "0       3\n",
+      "1       3\n",
+      "2      -8\n",
+      "3       2\n",
+      "4       3\n",
+      "       ..\n",
+      "5359    3\n",
+      "5360    3\n",
+      "5361    3\n",
+      "5362    3\n",
+      "5363    3\n",
+      "Name: Smoking Frequency, Length: 5364, dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "df = df.rename(columns = {'(OFFICE-BASED PHYSICIAN VISIT CHARGES 22)OBDTCH22'\n",
-    " : 'Total Office Based Visit Costs','OFTSMK53' : 'Smoking Frequency', 'ADASKALC42' : 'Alcohol Consumption', 'ADSTAL42' : 'Advised to Stop Alcohol',  })\n",
     "\n",
-    "print(df['Total Office Based Visit Costs'])\n",
+    "df = df.rename(columns={\n",
+    "    '(OFFICE-BASED PHYSICIAN VISIT CHARGES 22)OBDTCH22': 'Total Office Based Visit Costs',\n",
+    "    'NOSMOK42': 'Dr Advised Smoking at Home is Bad',\n",
+    "    'ADASKALC42': 'Alcohol Consumption',\n",
+    "    'ADSTAL42': 'Advised to Stop Alcohol',\n",
+    "    'INDCAT31': 'Work Industry',\n",
+    "    'EDUCYR': 'Years of Education',\n",
+    "    'COVAXEVR31': 'Covid Vaccine',\n",
+    "    'ADFLST42': 'Flu Vaccine prior 12 months',\n",
+    "    'ADCHLC42': 'Cholesterol checked within 5 years',\n",
+    "    'CHOLDX': 'High Cholesterol Diagnosis',\n",
+    "    'PHYSCL42': 'Dr Advised Exercise',\n",
+    "    'DIABDX_M18': 'Diabetes Diagnosis',\n",
+    "    'OFTSMK53' : 'Smoking Frequency',\n",
+    "    'EMPST31': 'Employment Status'\n",
+    "    })\n",
     "\n",
-    "\n",
-    "col = \"Total Office Based Visit Costs\"\n",
-    "print(f\"Mean {col}: {df[col].mean()}\")\n",
+    "print(df['Smoking Frequency'])\n",
     "\n",
     "\n",
     "\n",
