--- a/699M2.ipynb
+++ b/699M2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "id": "73d000b6",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "id": "ab8c8147",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "id": "8edf5c80",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
        "<function print(*args, sep=' ', end='\\n', file=None, flush=False)>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 44,
    "id": "587438b0",
    "metadata": {},
    "outputs": [
@@ -87,18 +87,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0       3\n",
-      "1       3\n",
-      "2      -8\n",
-      "3       2\n",
-      "4       3\n",
-      "       ..\n",
-      "5359    3\n",
-      "5360    3\n",
-      "5361    3\n",
-      "5362    3\n",
-      "5363    3\n",
-      "Name: Smoking Frequency, Length: 5364, dtype: int64\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5364 entries, 0 to 5363\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column                              Non-Null Count  Dtype  \n",
+      "---  ------                              --------------  -----  \n",
+      " 0   Total Office Based Visit Costs      5363 non-null   float64\n",
+      " 1   Smoking Frequency                   5364 non-null   int64  \n",
+      " 2   Dr Advised Smoking at Home is Bad   5364 non-null   int64  \n",
+      " 3   Alcohol Consumption                 5364 non-null   int64  \n",
+      " 4   Advised to Stop Alcohol             5364 non-null   int64  \n",
+      " 5   Work Industry                       5363 non-null   float64\n",
+      " 6   Years of Education                  5364 non-null   int64  \n",
+      " 7   Covid Vaccine                       5364 non-null   int64  \n",
+      " 8   Flu Vaccine prior 12 months         5364 non-null   int64  \n",
+      " 9   Cholesterol checked within 5 years  5364 non-null   int64  \n",
+      " 10  High Cholesterol Diagnosis          5364 non-null   int64  \n",
+      " 11  Dr Advised Exercise                 5364 non-null   int64  \n",
+      " 12  Diabetes Diagnosis                  5364 non-null   int64  \n",
+      "dtypes: float64(2), int64(11)\n",
+      "memory usage: 544.9 KB\n"
      ]
     }
    ],
@@ -118,14 +126,17 @@
     "    'PHYSCL42': 'Dr Advised Exercise',\n",
     "    'DIABDX_M18': 'Diabetes Diagnosis',\n",
     "    'OFTSMK53' : 'Smoking Frequency',\n",
-    "    'EMPST31': 'Employment Status'\n",
+    "   \n",
     "    })\n",
     "\n",
-    "print(df['Smoking Frequency'])\n",
     "\n",
     "\n",
+    "#keep only the above columns in new data frame\n",
+    "df = df.filter(items=cols)\n",
     "\n",
-    "\n"
+    "#print(df.head())\n",
+    "\n",
+    "df.info()\n"
    ]
   }
  ],
