--- a/699M2.ipynb
+++ b/699M2.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "id": "587438b0",
    "metadata": {},
    "outputs": [
@@ -108,6 +108,241 @@
       "dtypes: float64(2), int64(11)\n",
       "memory usage: 544.9 KB\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Office Based Visit Costs</th>\n",
+       "      <th>Smoking Frequency</th>\n",
+       "      <th>Dr Advised Smoking at Home is Bad</th>\n",
+       "      <th>Alcohol Consumption</th>\n",
+       "      <th>Advised to Stop Alcohol</th>\n",
+       "      <th>Work Industry</th>\n",
+       "      <th>Years of Education</th>\n",
+       "      <th>Covid Vaccine</th>\n",
+       "      <th>Flu Vaccine prior 12 months</th>\n",
+       "      <th>Cholesterol checked within 5 years</th>\n",
+       "      <th>High Cholesterol Diagnosis</th>\n",
+       "      <th>Dr Advised Exercise</th>\n",
+       "      <th>Diabetes Diagnosis</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>5363.000000</td>\n",
+       "      <td>5364.000000</td>\n",
+       "      <td>5364.000000</td>\n",
+       "      <td>5364.000000</td>\n",
+       "      <td>5364.000000</td>\n",
+       "      <td>5363.000000</td>\n",
+       "      <td>5364.000000</td>\n",
+       "      <td>5364.000000</td>\n",
+       "      <td>5364.000000</td>\n",
+       "      <td>5364.000000</td>\n",
+       "      <td>5364.000000</td>\n",
+       "      <td>5364.000000</td>\n",
+       "      <td>5364.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2876.164460</td>\n",
+       "      <td>1.944444</td>\n",
+       "      <td>-0.568419</td>\n",
+       "      <td>0.351603</td>\n",
+       "      <td>0.233781</td>\n",
+       "      <td>2.861645</td>\n",
+       "      <td>10.862603</td>\n",
+       "      <td>1.157532</td>\n",
+       "      <td>0.005779</td>\n",
+       "      <td>-0.135160</td>\n",
+       "      <td>1.092095</td>\n",
+       "      <td>-0.576063</td>\n",
+       "      <td>1.845451</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>11647.075357</td>\n",
+       "      <td>1.891394</td>\n",
+       "      <td>1.074330</td>\n",
+       "      <td>2.963350</td>\n",
+       "      <td>2.221252</td>\n",
+       "      <td>5.207828</td>\n",
+       "      <td>5.580054</td>\n",
+       "      <td>0.960519</td>\n",
+       "      <td>2.086906</td>\n",
+       "      <td>2.016481</td>\n",
+       "      <td>1.192814</td>\n",
+       "      <td>1.031661</td>\n",
+       "      <td>0.521204</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-8.000000</td>\n",
+       "      <td>-8.000000</td>\n",
+       "      <td>-15.000000</td>\n",
+       "      <td>-15.000000</td>\n",
+       "      <td>-15.000000</td>\n",
+       "      <td>-8.000000</td>\n",
+       "      <td>-8.000000</td>\n",
+       "      <td>-15.000000</td>\n",
+       "      <td>-15.000000</td>\n",
+       "      <td>-8.000000</td>\n",
+       "      <td>-8.000000</td>\n",
+       "      <td>-8.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>333.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>1.500000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>1833.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>16.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>-1.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>283775.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>17.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Total Office Based Visit Costs  Smoking Frequency  \\\n",
+       "count                     5363.000000        5364.000000   \n",
+       "mean                      2876.164460           1.944444   \n",
+       "std                      11647.075357           1.891394   \n",
+       "min                          0.000000          -8.000000   \n",
+       "25%                          0.000000           1.000000   \n",
+       "50%                        333.000000           3.000000   \n",
+       "75%                       1833.000000           3.000000   \n",
+       "max                     283775.000000           3.000000   \n",
+       "\n",
+       "       Dr Advised Smoking at Home is Bad  Alcohol Consumption  \\\n",
+       "count                        5364.000000          5364.000000   \n",
+       "mean                           -0.568419             0.351603   \n",
+       "std                             1.074330             2.963350   \n",
+       "min                            -8.000000           -15.000000   \n",
+       "25%                            -1.000000            -1.000000   \n",
+       "50%                            -1.000000            -1.000000   \n",
+       "75%                            -1.000000             1.000000   \n",
+       "max                             2.000000             7.000000   \n",
+       "\n",
+       "       Advised to Stop Alcohol  Work Industry  Years of Education  \\\n",
+       "count              5364.000000    5363.000000         5364.000000   \n",
+       "mean                  0.233781       2.861645           10.862603   \n",
+       "std                   2.221252       5.207828            5.580054   \n",
+       "min                 -15.000000     -15.000000           -8.000000   \n",
+       "25%                  -1.000000      -1.000000            9.000000   \n",
+       "50%                  -1.000000      -1.000000           12.000000   \n",
+       "75%                   2.000000       8.000000           16.000000   \n",
+       "max                   2.000000      15.000000           17.000000   \n",
+       "\n",
+       "       Covid Vaccine  Flu Vaccine prior 12 months  \\\n",
+       "count    5364.000000                  5364.000000   \n",
+       "mean        1.157532                     0.005779   \n",
+       "std         0.960519                     2.086906   \n",
+       "min        -8.000000                   -15.000000   \n",
+       "25%         1.000000                    -1.000000   \n",
+       "50%         1.000000                    -1.000000   \n",
+       "75%         2.000000                     1.000000   \n",
+       "max         2.000000                     2.000000   \n",
+       "\n",
+       "       Cholesterol checked within 5 years  High Cholesterol Diagnosis  \\\n",
+       "count                         5364.000000                 5364.000000   \n",
+       "mean                            -0.135160                    1.092095   \n",
+       "std                              2.016481                    1.192814   \n",
+       "min                            -15.000000                   -8.000000   \n",
+       "25%                             -1.000000                    1.000000   \n",
+       "50%                             -1.000000                    1.500000   \n",
+       "75%                              1.000000                    2.000000   \n",
+       "max                              2.000000                    2.000000   \n",
+       "\n",
+       "       Dr Advised Exercise  Diabetes Diagnosis  \n",
+       "count          5364.000000         5364.000000  \n",
+       "mean             -0.576063            1.845451  \n",
+       "std               1.031661            0.521204  \n",
+       "min              -8.000000           -8.000000  \n",
+       "25%              -1.000000            2.000000  \n",
+       "50%              -1.000000            2.000000  \n",
+       "75%              -1.000000            2.000000  \n",
+       "max               2.000000            2.000000  "
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -136,7 +371,8 @@
     "\n",
     "#print(df.head())\n",
     "\n",
-    "df.info()\n"
+    "df.info()\n",
+    "df.describe()\n"
    ]
   }
  ],
