--- a/699M2.ipynb
+++ b/699M2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "id": "73d000b6",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "ab8c8147",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "id": "8edf5c80",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
        "<function print(*args, sep=' ', end='\\n', file=None, flush=False)>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "id": "587438b0",
    "metadata": {},
    "outputs": [
@@ -87,26 +87,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "   Total Office Based Visit Costs  Dr Advised Smoking at Home is Bad  \\\n",
+      "0                           248.0                                 -1   \n",
+      "1                         16039.0                                 -1   \n",
+      "2                           217.0                                 -1   \n",
+      "3                          1278.0                                 -1   \n",
+      "4                          3530.0                                 -1   \n",
+      "\n",
+      "   Alcohol Consumption  Advised to Stop Alcohol  Work Industry  \\\n",
+      "0                    1                        2           -1.0   \n",
+      "1                   -1                       -1           -1.0   \n",
+      "2                   -1                       -1            5.0   \n",
+      "3                   -1                       -1           10.0   \n",
+      "4                    4                        2           10.0   \n",
+      "\n",
+      "   Years of Education  Covid Vaccine  Flu Vaccine prior 12 months  \\\n",
+      "0                   6              2                            2   \n",
+      "1                  14              1                           -1   \n",
+      "2                  17              1                           -1   \n",
+      "3                  16              1                           -1   \n",
+      "4                  16              1                            1   \n",
+      "\n",
+      "   Cholesterol checked within 5 years  High Cholesterol Diagnosis  \\\n",
+      "0                                   1                           1   \n",
+      "1                                  -1                           2   \n",
+      "2                                  -1                           2   \n",
+      "3                                  -1                           2   \n",
+      "4                                   1                           1   \n",
+      "\n",
+      "   Dr Advised Exercise  Diabetes Diagnosis  Smoking Frequency  Gender  \n",
+      "0                   -1                   1                  3       2  \n",
+      "1                   -1                   2                  3      -1  \n",
+      "2                   -1                   2                 -8      -1  \n",
+      "3                   -1                   2                  2      -1  \n",
+      "4                   -1                   2                  3       2  \n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 5364 entries, 0 to 5363\n",
-      "Data columns (total 13 columns):\n",
+      "Data columns (total 14 columns):\n",
       " #   Column                              Non-Null Count  Dtype  \n",
       "---  ------                              --------------  -----  \n",
       " 0   Total Office Based Visit Costs      5363 non-null   float64\n",
-      " 1   Smoking Frequency                   5364 non-null   int64  \n",
-      " 2   Dr Advised Smoking at Home is Bad   5364 non-null   int64  \n",
-      " 3   Alcohol Consumption                 5364 non-null   int64  \n",
-      " 4   Advised to Stop Alcohol             5364 non-null   int64  \n",
-      " 5   Work Industry                       5363 non-null   float64\n",
-      " 6   Years of Education                  5364 non-null   int64  \n",
-      " 7   Covid Vaccine                       5364 non-null   int64  \n",
-      " 8   Flu Vaccine prior 12 months         5364 non-null   int64  \n",
-      " 9   Cholesterol checked within 5 years  5364 non-null   int64  \n",
-      " 10  High Cholesterol Diagnosis          5364 non-null   int64  \n",
-      " 11  Dr Advised Exercise                 5364 non-null   int64  \n",
-      " 12  Diabetes Diagnosis                  5364 non-null   int64  \n",
-      "dtypes: float64(2), int64(11)\n",
-      "memory usage: 544.9 KB\n"
+      " 1   Dr Advised Smoking at Home is Bad   5364 non-null   int64  \n",
+      " 2   Alcohol Consumption                 5364 non-null   int64  \n",
+      " 3   Advised to Stop Alcohol             5364 non-null   int64  \n",
+      " 4   Work Industry                       5363 non-null   float64\n",
+      " 5   Years of Education                  5364 non-null   int64  \n",
+      " 6   Covid Vaccine                       5364 non-null   int64  \n",
+      " 7   Flu Vaccine prior 12 months         5364 non-null   int64  \n",
+      " 8   Cholesterol checked within 5 years  5364 non-null   int64  \n",
+      " 9   High Cholesterol Diagnosis          5364 non-null   int64  \n",
+      " 10  Dr Advised Exercise                 5364 non-null   int64  \n",
+      " 11  Diabetes Diagnosis                  5364 non-null   int64  \n",
+      " 12  Smoking Frequency                   5364 non-null   int64  \n",
+      " 13  Gender                              5364 non-null   int64  \n",
+      "dtypes: float64(2), int64(12)\n",
+      "memory usage: 586.8 KB\n"
      ]
     },
     {
@@ -131,7 +166,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Total Office Based Visit Costs</th>\n",
-       "      <th>Smoking Frequency</th>\n",
        "      <th>Dr Advised Smoking at Home is Bad</th>\n",
        "      <th>Alcohol Consumption</th>\n",
        "      <th>Advised to Stop Alcohol</th>\n",
@@ -143,6 +177,8 @@
        "      <th>High Cholesterol Diagnosis</th>\n",
        "      <th>Dr Advised Exercise</th>\n",
        "      <th>Diabetes Diagnosis</th>\n",
+       "      <th>Smoking Frequency</th>\n",
+       "      <th>Gender</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -152,8 +188,9 @@
        "      <td>5364.000000</td>\n",
        "      <td>5364.000000</td>\n",
        "      <td>5364.000000</td>\n",
-       "      <td>5364.000000</td>\n",
        "      <td>5363.000000</td>\n",
+       "      <td>5364.000000</td>\n",
+       "      <td>5364.000000</td>\n",
        "      <td>5364.000000</td>\n",
        "      <td>5364.000000</td>\n",
        "      <td>5364.000000</td>\n",
@@ -165,7 +202,6 @@
        "    <tr>\n",
        "      <th>mean</th>\n",
        "      <td>2876.164460</td>\n",
-       "      <td>1.944444</td>\n",
        "      <td>-0.568419</td>\n",
        "      <td>0.351603</td>\n",
        "      <td>0.233781</td>\n",
@@ -177,11 +213,12 @@
        "      <td>1.092095</td>\n",
        "      <td>-0.576063</td>\n",
        "      <td>1.845451</td>\n",
+       "      <td>1.944444</td>\n",
+       "      <td>-0.162192</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
        "      <td>11647.075357</td>\n",
-       "      <td>1.891394</td>\n",
        "      <td>1.074330</td>\n",
        "      <td>2.963350</td>\n",
        "      <td>2.221252</td>\n",
@@ -193,12 +230,13 @@
        "      <td>1.192814</td>\n",
        "      <td>1.031661</td>\n",
        "      <td>0.521204</td>\n",
+       "      <td>1.891394</td>\n",
+       "      <td>2.678110</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
        "      <td>0.000000</td>\n",
        "      <td>-8.000000</td>\n",
-       "      <td>-8.000000</td>\n",
        "      <td>-15.000000</td>\n",
        "      <td>-15.000000</td>\n",
        "      <td>-15.000000</td>\n",
@@ -209,11 +247,12 @@
        "      <td>-8.000000</td>\n",
        "      <td>-8.000000</td>\n",
        "      <td>-8.000000</td>\n",
+       "      <td>-8.000000</td>\n",
+       "      <td>-15.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
        "      <td>0.000000</td>\n",
-       "      <td>1.000000</td>\n",
        "      <td>-1.000000</td>\n",
        "      <td>-1.000000</td>\n",
        "      <td>-1.000000</td>\n",
@@ -225,11 +264,12 @@
        "      <td>1.000000</td>\n",
        "      <td>-1.000000</td>\n",
        "      <td>2.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
        "      <td>333.000000</td>\n",
-       "      <td>3.000000</td>\n",
        "      <td>-1.000000</td>\n",
        "      <td>-1.000000</td>\n",
        "      <td>-1.000000</td>\n",
@@ -241,11 +281,12 @@
        "      <td>1.500000</td>\n",
        "      <td>-1.000000</td>\n",
        "      <td>2.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>-1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
        "      <td>1833.000000</td>\n",
-       "      <td>3.000000</td>\n",
        "      <td>-1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>2.000000</td>\n",
@@ -257,11 +298,12 @@
        "      <td>2.000000</td>\n",
        "      <td>-1.000000</td>\n",
        "      <td>2.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
        "      <td>283775.000000</td>\n",
-       "      <td>3.000000</td>\n",
        "      <td>2.000000</td>\n",
        "      <td>7.000000</td>\n",
        "      <td>2.000000</td>\n",
@@ -273,51 +315,43 @@
        "      <td>2.000000</td>\n",
        "      <td>2.000000</td>\n",
        "      <td>2.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Total Office Based Visit Costs  Smoking Frequency  \\\n",
-       "count                     5363.000000        5364.000000   \n",
-       "mean                      2876.164460           1.944444   \n",
-       "std                      11647.075357           1.891394   \n",
-       "min                          0.000000          -8.000000   \n",
-       "25%                          0.000000           1.000000   \n",
-       "50%                        333.000000           3.000000   \n",
-       "75%                       1833.000000           3.000000   \n",
-       "max                     283775.000000           3.000000   \n",
+       "       Total Office Based Visit Costs  Dr Advised Smoking at Home is Bad  \\\n",
+       "count                     5363.000000                        5364.000000   \n",
+       "mean                      2876.164460                          -0.568419   \n",
+       "std                      11647.075357                           1.074330   \n",
+       "min                          0.000000                          -8.000000   \n",
+       "25%                          0.000000                          -1.000000   \n",
+       "50%                        333.000000                          -1.000000   \n",
+       "75%                       1833.000000                          -1.000000   \n",
+       "max                     283775.000000                           2.000000   \n",
        "\n",
-       "       Dr Advised Smoking at Home is Bad  Alcohol Consumption  \\\n",
-       "count                        5364.000000          5364.000000   \n",
-       "mean                           -0.568419             0.351603   \n",
-       "std                             1.074330             2.963350   \n",
-       "min                            -8.000000           -15.000000   \n",
-       "25%                            -1.000000            -1.000000   \n",
-       "50%                            -1.000000            -1.000000   \n",
-       "75%                            -1.000000             1.000000   \n",
-       "max                             2.000000             7.000000   \n",
+       "       Alcohol Consumption  Advised to Stop Alcohol  Work Industry  \\\n",
+       "count          5364.000000              5364.000000    5363.000000   \n",
+       "mean              0.351603                 0.233781       2.861645   \n",
+       "std               2.963350                 2.221252       5.207828   \n",
+       "min             -15.000000               -15.000000     -15.000000   \n",
+       "25%              -1.000000                -1.000000      -1.000000   \n",
+       "50%              -1.000000                -1.000000      -1.000000   \n",
+       "75%               1.000000                 2.000000       8.000000   \n",
+       "max               7.000000                 2.000000      15.000000   \n",
        "\n",
-       "       Advised to Stop Alcohol  Work Industry  Years of Education  \\\n",
-       "count              5364.000000    5363.000000         5364.000000   \n",
-       "mean                  0.233781       2.861645           10.862603   \n",
-       "std                   2.221252       5.207828            5.580054   \n",
-       "min                 -15.000000     -15.000000           -8.000000   \n",
-       "25%                  -1.000000      -1.000000            9.000000   \n",
-       "50%                  -1.000000      -1.000000           12.000000   \n",
-       "75%                   2.000000       8.000000           16.000000   \n",
-       "max                   2.000000      15.000000           17.000000   \n",
-       "\n",
-       "       Covid Vaccine  Flu Vaccine prior 12 months  \\\n",
-       "count    5364.000000                  5364.000000   \n",
-       "mean        1.157532                     0.005779   \n",
-       "std         0.960519                     2.086906   \n",
-       "min        -8.000000                   -15.000000   \n",
-       "25%         1.000000                    -1.000000   \n",
-       "50%         1.000000                    -1.000000   \n",
-       "75%         2.000000                     1.000000   \n",
-       "max         2.000000                     2.000000   \n",
+       "       Years of Education  Covid Vaccine  Flu Vaccine prior 12 months  \\\n",
+       "count         5364.000000    5364.000000                  5364.000000   \n",
+       "mean            10.862603       1.157532                     0.005779   \n",
+       "std              5.580054       0.960519                     2.086906   \n",
+       "min             -8.000000      -8.000000                   -15.000000   \n",
+       "25%              9.000000       1.000000                    -1.000000   \n",
+       "50%             12.000000       1.000000                    -1.000000   \n",
+       "75%             16.000000       2.000000                     1.000000   \n",
+       "max             17.000000       2.000000                     2.000000   \n",
        "\n",
        "       Cholesterol checked within 5 years  High Cholesterol Diagnosis  \\\n",
        "count                         5364.000000                 5364.000000   \n",
@@ -329,18 +363,18 @@
        "75%                              1.000000                    2.000000   \n",
        "max                              2.000000                    2.000000   \n",
        "\n",
-       "       Dr Advised Exercise  Diabetes Diagnosis  \n",
-       "count          5364.000000         5364.000000  \n",
-       "mean             -0.576063            1.845451  \n",
-       "std               1.031661            0.521204  \n",
-       "min              -8.000000           -8.000000  \n",
-       "25%              -1.000000            2.000000  \n",
-       "50%              -1.000000            2.000000  \n",
-       "75%              -1.000000            2.000000  \n",
-       "max               2.000000            2.000000  "
+       "       Dr Advised Exercise  Diabetes Diagnosis  Smoking Frequency       Gender  \n",
+       "count          5364.000000         5364.000000        5364.000000  5364.000000  \n",
+       "mean             -0.576063            1.845451           1.944444    -0.162192  \n",
+       "std               1.031661            0.521204           1.891394     2.678110  \n",
+       "min              -8.000000           -8.000000          -8.000000   -15.000000  \n",
+       "25%              -1.000000            2.000000           1.000000    -1.000000  \n",
+       "50%              -1.000000            2.000000           3.000000    -1.000000  \n",
+       "75%              -1.000000            2.000000           3.000000     2.000000  \n",
+       "max               2.000000            2.000000           3.000000     2.000000  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,16 +395,29 @@
     "    'PHYSCL42': 'Dr Advised Exercise',\n",
     "    'DIABDX_M18': 'Diabetes Diagnosis',\n",
     "    'OFTSMK53' : 'Smoking Frequency',\n",
+    "    'ADSEX42' : 'Gender',\n",
     "   \n",
     "    })\n",
     "\n",
     "\n",
     "\n",
-    "#keep only the above columns in new data frame\n",
-    "df = df.filter(items=cols)\n",
+    "df = df[['Total Office Based Visit Costs',\n",
+    "         'Dr Advised Smoking at Home is Bad',\n",
+    "         'Alcohol Consumption',\n",
+    "         'Advised to Stop Alcohol',\n",
+    "         'Work Industry',\n",
+    "         'Years of Education',\n",
+    "         'Covid Vaccine',\n",
+    "         'Flu Vaccine prior 12 months',\n",
+    "         'Cholesterol checked within 5 years',\n",
+    "         'High Cholesterol Diagnosis',\n",
+    "         'Dr Advised Exercise',\n",
+    "         'Diabetes Diagnosis',\n",
+    "         'Smoking Frequency',\n",
+    "         'Gender']]\n",
     "\n",
-    "#print(df.head())\n",
-    "\n",
+    "# View summary info\n",
+    "print(df.head())\n",
     "df.info()\n",
     "df.describe()\n"
    ]
